--- a/crew_store/src/Pages/home.css
+++ b/crew_store/src/Pages/home.css
@@ -41,7 +41,7 @@
     width: 80%;
     margin: auto;
     line-height: 40px;
-    margin-top: 20px;
+    margin-top: 40px;
   }
 
   .container21 {
@@ -99,6 +99,7 @@
     width: 95%;
     text-align: center;
     margin-top: 10px;
+    margin-bottom: 50px;
     font-size: 12px;
     font-weight: bolder;
     text-decoration: 3px solid black underline;
@@ -108,15 +109,18 @@
   .main{
     background-color:lightgray;
     margin-top: 20px;
+    height: 1500px;
   }
 
   .first{
     font-size: 35px;
     border: 5px solid black;
-    width: 18%;
+    width: 17%;
     height: auto;
     padding: 14px;
-    margin-top: 10px;
+    position: relative;
+    top: 55px;
+    margin-left: 13%;
   }
 
   .main_grid{
@@ -125,7 +129,7 @@
     gap: 15px;
     width: 75%;
     margin: auto;
-    margin-top: 20px;
+    margin-top: 80px;
     border-top: 4px solid black;
     font-size: 20px;
   }
@@ -152,4 +156,11 @@
     margin-top: 100px;
     font-size: 18px;
     margin-bottom: 50px;
+  }
+
+  .h{
+    font-size: 40px;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
